--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <div>
 
     <head>
-        <h1>this is the header</h1>
-        <H1>commit</H1>
+        <h1>thiis the header</h1>
+        <H1>commi
+        </H1>
+        <h2>sa nge online</h2>
     </head>
 
 </div>
